<resources>
    <string name="app_name">DataBase</string>
    <string name="view_button">View</string>
    <string name="root_fragment_title">Database</string>
    <string name="add_button">Add</string>
    <string name="exit_button">Exit</string>
    <string name="delete_button">Delete</string>
    <string name="sort_button">Sort</string>
    <string name="change_button">Change</string>
    <string name="search_button">Search</string>
    <string name="add_fragment_title">Adding</string>
    <string name="textViewSurname">Surname</string>
    <string name="defaultTextViewSurname">Surname</string>
    <string name="textViewName">Name</string>
    <string name="defaultTextViewName">Name</string>
    <string name="textViewPatronymic">Patronymic</string>
    <string name="defaultTextViewPatronymic">Patronymic</string>
    <string name="textViewAge">Age</string>
    <string name="defaultTextViewAge">20</string>
    <string name="woman">Woman</string>
    <string name="male">Male</string>
    <string name="textViewSex">Sex</string>
    <string name="undefined">Undefined</string>
    <string name="edit_fragment_title">Edit</string>
    <string name="apply_button">Apply</string>
    <string name="sort_fragment_title">Sort by</string>
    <string name="search_fragment_title">Search</string>
    <string name="view_fragment_title">Found records</string>
    <string name="textViewPhoto">Photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>