<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pr11.view.SortFragment">

    <TextView
        android:id="@+id/fragmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_fragment_title"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/sortBySurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewSurname" />

        <Button
            android:id="@+id/sortByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewName" />


        <Button
            android:id="@+id/sortByPatronymic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewPatronymic" />

        <Button
            android:id="@+id/sortByAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewAge"/>

        <Button
            android:id="@+id/sortBySex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewSex" />
    </LinearLayout>

</RelativeLayout>