<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pr11.view.EditFragment">

    <TextView
        android:id="@+id/fragmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_fragment_title"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/addView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_below="@+id/fragmentTitle"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewSurname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <!--###################################-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <!--###################################-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewPatronymic"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPatronymic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <!--###################################-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewAge"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp" />

        <!--###################################-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewSex"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sexSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp" />

        <!--###################################-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_button"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</RelativeLayout>